test_regress/t/t_tagged_pattern_wildcard_bad.out
%Error: t/t_tagged_pattern_wildcard_bad.v:18:11: Expected tagged pattern in matches expression
                                               : ... note: In instance 't'
   18 |     if (v matches .*)
      |           ^~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
